ssd/out/ssd/templates/app-ssd-cloud-admin.yaml
---
# Source: ssd/templates/app-ssd-cloud-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssd-cloud-admin
  namespace: onework2
  labels:
    helm.sh/chart: ssd-3.3.0
    env: dev
    app.kubernetes.io/name: ssd
    app.kubernetes.io/instance: ssd-infra
    app.kubernetes.io/version: "1.16.x"
    app.kubernetes.io/managed-by: Helm
    app: cloud-admin
spec:
  ports:
  - name: http
    port: 58080
    targetPort: 58080
  selector:
    env: dev
    app.kubernetes.io/name: ssd
    app: cloud-admin
---
# Source: ssd/templates/app-ssd-cloud-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssd-cloud-admin
  namespace: onework2
  labels:
    helm.sh/chart: ssd-3.3.0
    env: dev
    app.kubernetes.io/name: ssd
    app.kubernetes.io/instance: ssd-infra
    app.kubernetes.io/version: "1.16.x"
    app.kubernetes.io/managed-by: Helm
    app: cloud-admin
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      env: dev
      app.kubernetes.io/name: ssd
      app: cloud-admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: 0
  template:
    metadata:
      labels:
        env: dev
        app.kubernetes.io/name: ssd
        app: cloud-admin
    spec:
      automountServiceAccountToken: false
      containers:
      - name: cloud-admin
        image: 192.168.139.80:5000/ssd/ssd-cloud-admin:1.13.0
        imagePullPolicy: Always
        ports:
        - containerPort: 58080
          name: http
        # Probes
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: 58080
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /health
            port: 58080
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 58080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        # Resources
        resources:
          limits:
            cpu: 500m
            memory: 750Mi
          requests:
            cpu: 500m
            memory: 750Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add: []
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 10001
          runAsNonRoot: true
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        # Volumes
        volumeMounts:
        # Mount from Secrets
        - mountPath: /var/run/secrets/db.yml
          name: secret-common-db-props
          readOnly: true
          subPath: secret-props.yml
        - mountPath: /var/run/secrets/common.yml
          name: secret-common-props
          readOnly: true
          subPath: secret-props.yml
        # Mount from Custom
        - mountPath: /var/log/ssd-v2/
          name: logs-dir
        - mountPath: /tmp
          name: web-server-tmp
      volumes:
      # Volumes Secrets
      - name: secret-common-db-props
        secret:
          secretName: ssd-common-db-props
          defaultMode: 292
          items:
          - key: secret-props.yml
            path: secret-props.yml
      - name: secret-common-props
        secret:
          secretName: ssd-common-props
          defaultMode: 292
          items:
          - key: secret-props.yml
            path: secret-props.yml
      # Volumes Custom
      - name: logs-dir
        emptyDir:
          sizeLimit: 100Mi
      - name: web-server-tmp
        emptyDir:
          sizeLimit: 100Mi
      # End of Volumes
