ssd/out/ssd/templates/ing-ssd-proxy-ws.yaml
---
# Source: ssd/templates/ing-ssd-proxy-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssd-proxy-ws
  namespace: onework2
  labels:
    helm.sh/chart: ssd-3.3.0
    env: dev
    app.kubernetes.io/name: ssd
    app.kubernetes.io/instance: ssd-router
    app.kubernetes.io/version: "1.16.x"
    app.kubernetes.io/managed-by: Helm
    app: proxy-ws
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "onework.voda.ru"
      secretName: onework-tls
  rules:
  - host: onework.voda.ru
    http:
      paths:
      - path: /ssd
        pathType: Prefix
        backend:
          service:
            name: ssd-proxy-ws
            port:
              number: 3001
      - path: /host
        pathType: Prefix
        backend:
          service:
            name: ssd-proxy-ws
            port:
              number: 3001
